# cpp_template

./: CMakeLists.txt  README.md
src/lib/: lib.cpp
